--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,15 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "client/build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api",
+        "function": "api"
       }
     ]
   }
